# CB_A1_FINBOT_BACKEND

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  check_counts.py  clear_db.py  debug_qdrant.py  do_setup.py  main.py  pyproject.toml  requirements.txt  start.sh  test_auth.py  test_checkpointer.py  test_db.py  test_rag_pipeline.py
app/: config.py  models.py
app/api/: admin.py  auth.py  chat.py  deps.py
app/db/: models.py  session.py
app/evaluation/: dataset.py  evaluator.py  langsmith_client.py  status_tracker.py
app/guardrails/: input_guards.py  output_guards.py
app/ingestion/: chunker.py  indexer.py  parser.py  pipeline.py  status_tracker.py  summarizer.py
app/rbac/: access_control.py
app/retrieval/: context_builder.py  llm_chain.py  retriever.py
app/router/: query_router.py  routes.py
app/services/: llm_factory.py  rag_service.py  rag_service_2.py
data/finance/: department_budget_2024.docx  financial_summary.docx  quarterly_financial_report.docx  vendor_payments_summary.docx
data/marketing/: campaign_performance_data.docx  customer_acquisition_report.docx  marketing_report_2024.docx  marketing_report_q1_2024.docx  marketing_report_q2_2024.docx  marketing_report_q3_2024.docx  marketing_report_q4_2024.docx
migrations/: env.py
migrations/versions/: 5858d4dae09b_initial_schema.py  740d18faec6d_add_querylog.py  a1b2c3d4e5f6_add_extra_roles.py  b3b67ecb7608_add_is_exported_to_querylog.py  (+1 more)
scripts/: create_admin.py  test_ollama.py
tests/: test_chat.py  test_checkpointer.py  test_ingest_local.py  test_run_eval.py
(+7 files in other folders)
