[project]
name = "backend"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "datasets==3.2.0",
    "docling==2.14.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "huggingface-hub==0.27.1",
    "langchain==0.3.14",
    "langchain-community==0.3.14",
    "langchain-groq==0.2.4",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-postgres>=3.0.5",
    "pandas==2.2.3",
    "psycopg[binary]>=3.3.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "qdrant-client==1.12.1",
    "ragas==0.2.8",
    "semantic-router==0.1.1",
    "sentence-transformers==3.3.1",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]==0.34.0",
]
